--- a/src/main/resources/validate.properties
+++ b/src/main/resources/validate.properties
@@ -1,6 +1,7 @@
 cached=predefresults161012.txt
 doiblacklist=doi.prefix.1000.tsv
 # boundary=article
-boundary=SENT
 # boundary=text
+# boundary=SENT|text|article
+boundary=SENT|table
 entity=z:acc
