--- a/src/main/resources/validate.properties
+++ b/src/main/resources/validate.properties
@@ -3,5 +3,5 @@ doiblacklist=doi.prefix.1000.tsv
 # boundary=article
 # boundary=text
 # boundary=SENT|text|article
-boundary=SENT|table
+boundary=table|SENT
 entity=z:acc
