refactoring and resource name validaton added.

--- a/src/main/resources/validate.properties
+++ b/src/main/resources/validate.properties
@@ -4,4 +4,5 @@ doiblacklist=doi.prefix.1000.tsv
 # boundary=text
 # boundary=SENT|text|article
 boundary=table|SENT
-entity=z:acc
+entity=z:[a-z]+
+# entity=z:acc
