only sentence as boundary. no valid section. automatic deploy.

--- a/src/main/resources/validate.properties
+++ b/src/main/resources/validate.properties
@@ -3,6 +3,7 @@ doiblacklist=doi.prefix.1000.tsv
 # boundary=article
 # boundary=text
 # boundary=SENT|text|article
-boundary=table|SENT
+# boundary=SENT
+# boundary=table|SENT
 entity=z:[a-z]+
 # entity=z:acc
